# PrimeKG

./: .gitignore  README.md  audit_primekg.cypher  build_primekg_subset.py  ingest_primekg_subset.py  inspect_primekg.py  nl_to_cypher_primekg.py  pyproject.toml  rules_primekg.cypher
cypher/: rule_mining.cypher
outputs/: qa_eval_results.csv  rule_candidates.csv
questions/: primekg_qa_questions.csv
scripts/: evaluate_qa.py  mine_rule_candidates.py
