[project]
name = "primekg"
version = "0.1.0"
description = "Knowledge graph inspection utilities for primeKG"
authors = [{ name = "nle43926", email = "nle43926@example.com" }]
requires-python = ">=3.13,<4.0"
dependencies = [
	"dotenv>=0.9.9",
	"neo4j>=6.2.0",
	"openai>=2.36.0",
	"pandas==3.0.3",
	"tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
